--- a/React-2/index.html
+++ b/React-2/index.html
@@ -4,17 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    
     <script src="https://cdn.bootcss.com/react/15.4.2/react.min.js"></script>
+    <script src="https://unpkg.com/react-router@3.0.1/umd/ReactRouter.min.js"></script> 
     <script src="https://cdn.bootcss.com/react/15.4.2/react-dom.min.js"></script>
-    <!-- <script src="https://cdn.bootcss.com/babel-standalone/6.22.1/babel.min.js"></script> -->
-    <script src="babel.min.js"></script>
+    <script src="https://cdn.bootcss.com/babel-standalone/6.22.1/babel.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="./style/comment.css">
+    <title>Document</title>
 </head>
 <body>
-    <div id="example"></div>
-    <script type="text/jsx" src='./src/comments/comment.jsx'></script>
-    <script type="text/jsx" src='./src/comments/commentList.jsx'></script>
-    <script type="text/jsx" src='./src/comments/comments.jsx'></script>
+    <div id="app"></div>
+    <script type="text/jsx" src="./src/comment.jsx"></script>
+    <script type="text/jsx" src="./src/commentInput.jsx"></script>
+    <script type="text/jsx" src="./src/commentList.jsx"></script>
+    <script type="text/jsx" src="./src/test.jsx"></script>
+    <script type='text/jsx' src='./src/commentApp.jsx'></script>
+    <script type="text/jsx" src="./src/routetMap.jsx"></script>
+    <script type='text/jsx' src='./index.jsx'></script>
+</script>
 </body>
 </html>
-
